[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/client",
    "crates/redis",
    "crates/postgres",
    "crates/mysql",
    "crates/sqlite",
    "examples/basic",
    "examples/redis",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"

# Backend-specific
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio"] }

# Internal crates
wg-core = { path = "crates/core" }
wg-client = { path = "crates/client" }
wg-redis = { path = "crates/redis" }
wg-sqlite = { path = "crates/sqlite" }
