[package]
name = "wg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for the wg job queue library"

[lib]
path = "lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }

