[package]
name = "wg-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MySQL backend for wg job queue"

[lib]
path = "lib.rs"

[dependencies]
wg-core = { workspace = true }
sqlx = { workspace = true, features = ["mysql"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

