[package]
name = "wg-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PostgreSQL backend for wg job queue"

[lib]
path = "lib.rs"

[dependencies]
wg-core = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

