[package]
name = "wg-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API server and worker pool for wg job queue"

[lib]
path = "lib.rs"

[dependencies]
wg-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
actix-web = "4"
actix-rt = "2"

