[package]
name = "example-redis"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example-redis"
path = "main.rs"

[dependencies]
wg-core = { path = "../../crates/core" }
wg-redis = { path = "../../crates/redis" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

